--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,4 @@ package: github.com/mmm888/gowiki
 import:
 - package: github.com/gorilla/mux
 - package: github.com/russross/blackfriday
+- package: github.com/unrolled/render
