--- a/glide.yaml
+++ b/glide.yaml
@@ -3,3 +3,4 @@ import:
 - package: github.com/gorilla/mux
 - package: github.com/russross/blackfriday
 - package: github.com/unrolled/render
+- package: github.com/BurntSushi/toml
