--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 Scheme = "http://"
-BaseURL = "dev01-xenial:8080"
-#BaseURL = "localhost:8080"
+#BaseURL = "dev01-xenial:8080"
+BaseURL = "localhost:8080"
 RepoName = "wikitest"
 SubDir = "repo"
